@@ -26,9 +26,6 @@
 
 #include "wgx-internals.h"
 
-/* should be enough for any message */
-#define DBG_BUFFER_SIZE (64 * 1024)
-
 WGX_TRACE_HANDLER InternalTraceHandler = NULL;
 
 /**
@@ -53,70 +50,51 @@ void WgxSetInternalTraceHandler(WGX_TRACE_HANDLER h)
  * @param[in] ... the parameters.
  * @return Return value is the same as MessageBox returns.
  */
-int WgxDisplayLastError(HWND hParent,UINT msgbox_flags, char *format, ...)
+int WgxDisplayLastError(HWND hParent,UINT msgbox_flags, wchar_t *format, ...)
 {
-    char *msg;
     va_list arg;
-    unsigned int length;
+    wchar_t *msg;
+    wchar_t *desc;
+    #define BUFFER_SIZE 32
+    wchar_t buffer[BUFFER_SIZE];
     DWORD error = GetLastError();
-    wchar_t *umsg, *desc = NULL, *text;
-    #define SM_BUFFER_SIZE 32
-    wchar_t b[SM_BUFFER_SIZE];
     int result;
     
-    if(format == NULL)
+    if(!format)
         return 0;
 
-    msg = malloc(DBG_BUFFER_SIZE);
+    va_start(arg,format);
+    msg = wgx_vswprintf(format,arg);
+    va_end(arg);
+
     if(msg == NULL){
-        etrace("not enough memory (case 1)");
+        etrace("not enough memory");
         return 0;
     }
 
-    /* store formatted string into buffer */
-    va_start(arg,format);
-    memset(msg,0,DBG_BUFFER_SIZE);
-    length = _vsnprintf(msg,DBG_BUFFER_SIZE - 1,format,arg);
-    (void)length;
-    msg[DBG_BUFFER_SIZE - 1] = 0;
-    va_end(arg);
-
-    /* send formatted string to the debugger */
+    /* produce debugging output */
     if(InternalTraceHandler){
         SetLastError(error);
-        InternalTraceHandler(LAST_ERROR_FLAG,E"%s",msg);
+        InternalTraceHandler(LAST_ERROR_FLAG,E"%ws",msg);
     }    
     
     /* display message box */
-    umsg = malloc(DBG_BUFFER_SIZE * sizeof(wchar_t));
-    if(umsg == NULL){
-        etrace("not enough memory (case 2)");
-        free(msg);
-        return 0;
-    }
-    _snwprintf(umsg,DBG_BUFFER_SIZE,L"%hs",msg);
-    umsg[DBG_BUFFER_SIZE - 1] = 0;
-    
     if(!FormatMessageW(FORMAT_MESSAGE_ALLOCATE_BUFFER | 
       FORMAT_MESSAGE_FROM_SYSTEM | FORMAT_MESSAGE_IGNORE_INSERTS,
       NULL,error,MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT),
       (LPWSTR)(void *)&desc,0,NULL)){
         if(error == ERROR_COMMITMENT_LIMIT)
-            (void)_snwprintf(b,SM_BUFFER_SIZE,L"Not enough memory.");
+            (void)_snwprintf(buffer,BUFFER_SIZE,L"Not enough memory.");
         else
-            (void)_snwprintf(b,SM_BUFFER_SIZE,L"Error code = 0x%x",(UINT)error);
-        b[SM_BUFFER_SIZE - 1] = 0;
-        desc = NULL;
-        text = b;
+            (void)_snwprintf(buffer,BUFFER_SIZE,L"Error code = 0x%x",(UINT)error);
+        buffer[BUFFER_SIZE - 1] = 0;
+        result = MessageBoxW(hParent,buffer,msg,msgbox_flags);
     } else {
-        text = desc;
+        result = MessageBoxW(hParent,desc,msg,msgbox_flags);
+        LocalFree(desc);
     }
-
-    result = MessageBoxW(hParent,text,umsg,msgbox_flags);
     
     /* cleanup */
-    if(desc) LocalFree(desc);
-    free(umsg);
     free(msg);
     return result;
 }
